--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "test": "react-scripts test",
+    "test": "npx vitest --watch",
     "lint": "eslint .",
     "preview": "vite preview"
   },
